use local storage

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1 class="text-center">Todo App</h1>
 
       <div class="row">
-        <div id="alert-message" class="alert alert-danger" role="alert">
+        <div id="alert-message" class="alert alert-danger" role="alert" style="display: none;">
           You cannot submit empty value
         </div>
         <div class="col-10">
@@ -29,7 +29,7 @@
           />
         </div>
         <div class="col-2">
-          <button id="add-todo" type="button" class="btn btn-success">
+          <button id="add-todo" type="button" class="btn btn-success w-100">
             Add
           </button>
         </div>
