--- a/index.html
+++ b/index.html
@@ -30,8 +30,16 @@
         </div>
         <div class="col-2">
           <button id="add-todo" type="button" class="btn btn-success w-100">
-            Add
+            Save
           </button>
+        </div>
+        <div class="col">
+          <input
+            type="search"
+            id="search-input-form"
+            class="form-control mt-2"
+            placeholder="Search Todo"
+          />
         </div>
       </div>
       <ul class="list-group mt-2" id="todo-container">
